# Automated-crypto-news

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run_crypto_report.bat  run_crypto_reporter.bat  setup.py  setup_task.ps1
.github/workflows/: main.yml
crypto_reporter/: __init__.py
