[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-news-reporter"
version = "1.0.0"
description = "A cryptocurrency news and market data reporter that sends daily email updates"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.1",
    "pandas>=2.1.4",
    "newsapi-python>=0.2.7",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.9.0",
] 